crates/pardosa-genome/tests/compile_fail/usize_field.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    count: usize,
}

fn main() {}
